# Enti-Final-Project

./: .gitignore  .vercelignore  ArashAjdariTimer.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  serve_case_mirror.py  timer.html  vercel.json
case-mirror/: app.js  index.html  live.html  live.js  styles.css
casecoach/backend/: .env.example  .gitignore  API_KEYS.md  README.md  RUN_LIVE.md  pyproject.toml
casecoach/backend/app/: __init__.py  config.py  main.py
casecoach/backend/app/api/: deps.py  routes_analysis.py  routes_live.py  routes_report.py  routes_upload.py
casecoach/backend/app/extractors/: __init__.py  asr_faster_whisper.py  body_tracking.py  groq_client.py  qwen_omni_client.py  qwen_vl_client.py  tavily_client.py
casecoach/backend/app/models/: __init__.py  rubric.py  schemas.py
casecoach/backend/app/pipelines/: __init__.py  analysis_pipeline.py  audio_pipeline.py  fusion_pipeline.py  ingest.py  preprocess.py  report_pipeline.py  slide_pipeline.py
casecoach/backend/app/prompts/: coaching_report.md  rubric_score.md  slide_critique.md  video_summary.md
casecoach/backend/app/scoring/: __init__.py  content_scores.py  delivery_scores.py  qa_scores.py  slide_scores.py  team_scores.py
casecoach/backend/app/storage/: db.py  object_store.py
casecoach/backend/app/workers/: __init__.py  tasks.py
casecoach/backend/tests/: test_body_tracking.py  test_delivery_scores.py  test_ingest.py  test_job_store.py  test_live_report_evidence.py  test_qwen_client.py  test_safety.py
docs/: API_OVERVIEW.md  ARCHITECTURE.md  FRONTEND_GUIDE.md  (+18 more)
(+10 files in other folders)
